# drinkfyi

./: README.md  SKILL.md  demo.tape  pyproject.toml
src/drinkfyi/: __init__.py  cli.py
tests/: test_hub.py
