[project]
name = "drinkfyi"
version = "0.1.1"
description = "Unified beverage knowledge hub — cocktails, wine, beer, whiskey, tea, coffee, and sake in one package."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "beverage",
    "cocktail",
    "wine",
    "beer",
    "whiskey",
    "tea",
    "coffee",
    "sake",
    "drink",
    "mixology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
cocktail = ["cocktailfyi>=0.1"]
wine = ["vinofyi>=0.1"]
beer = ["beerfyi>=0.1"]
whiskey = ["whiskeyfyi>=0.1"]
tea = ["teafyi>=0.1"]
coffee = ["brewfyi>=0.1"]
sake = ["nihonshufyi>=0.1"]
cli = ["typer>=0.15", "rich>=13.0"]
all = [
    "drinkfyi[cocktail,wine,beer,whiskey,tea,coffee,sake,cli]",
]

[project.scripts]
drinkfyi = "drinkfyi.cli:app"

[project.urls]
Homepage = "https://fyipedia.com"
"CocktailFYI" = "https://cocktailfyi.com"
"VinoFYI" = "https://vinofyi.com"
"BeerFYI" = "https://beerfyi.com"
"WhiskeyFYI" = "https://whiskeyfyi.com"
"TeaFYI" = "https://teafyi.com"
"BrewFYI" = "https://brewfyi.com"
"NihonshuFYI" = "https://nihonshufyi.com"
Repository = "https://github.com/fyipedia/drinkfyi"
Issues = "https://github.com/fyipedia/drinkfyi/issues"
Changelog = "https://github.com/fyipedia/drinkfyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drinkfyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.uv.sources]
cocktailfyi = { path = "../cocktailfyi", editable = true }
vinofyi = { path = "../vinofyi", editable = true }
beerfyi = { path = "../beerfyi", editable = true }
whiskeyfyi = { path = "../whiskeyfyi", editable = true }
teafyi = { path = "../teafyi", editable = true }
brewfyi = { path = "../brewfyi", editable = true }
nihonshufyi = { path = "../nihonshufyi", editable = true }

[dependency-groups]
dev = [
    "cocktailfyi>=0.1",
    "vinofyi>=0.1",
    "beerfyi>=0.1",
    "whiskeyfyi>=0.1",
    "teafyi>=0.1",
    "brewfyi>=0.1",
    "nihonshufyi>=0.1",
    "httpx>=0.27",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
